--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </header>
     <button id="addTaskBtn">Add Task</button>
     <main></main>
-    <script src="pgm1.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
